# GRWM

./: README.md
backend/: .dockerignore  .gitignore  Dockerfile  agents.py  api.py  cloudrun.yaml  deploy.sh  main.py  pyproject.toml  tech_stack_badges.py  test_agents.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
frontend/app/components/: GenerationFlow.tsx  LoadingPanel.tsx  PWAInstaller.tsx  ProfileCard.tsx  ReadmePreview.tsx  StyleSelector.tsx  UsernameInput.tsx
frontend/public/: manifest.json  robots.txt  schema.json  sw.js
